--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
         </div>
 
-        <div class="hamburger" onclick="toggleHambugger()">
+        <div class="hamburger" onclick="toggleHambuger()">
           <div class="line"></div>
           <div class="line"></div>
           <div class="line"></div>
